<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="30dp"
    android:text="@string/test1"
    android:layout_marginStart="30dp"
    android:layout_gravity="center_horizontal"
    android:id="@+id/instructions1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/test2"
        android:layout_marginStart="30dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/instructions2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/test4"
        android:layout_marginStart="50dp"
        android:id="@+id/instructions3"/>

</LinearLayout>