<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/d1"
    android:orientation="vertical">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <!-- Capture picture button -->

        <!-- Record video button -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/click"
            android:textColor="@color/colorAccent"
            android:textAllCaps="true"
            android:layout_marginStart="95dp"
            android:textStyle="italic"/>

        <com.like.LikeButton
            app:icon_type="heart"
            app:icon_size="25dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="40dp"
            android:id="@+id/star_button"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/btnRecordVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:background="@color/btn_bg"
            android:gravity="center"
            android:text="@string/rest"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:background="@color/btn_bg"
            android:gravity="center"
            android:text="@string/exer"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu">


    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>